Started on the html/less of the home page, basic structure of nav bar

--- a/less/index.less
+++ b/less/index.less
@@ -58,3 +58,10 @@ table{
 }
 
 /* Your Code Goes Here */
+body{
+  background: #FFFFFF;
+  color: #222222;
+  font-family: Roboto, Arial, sans-serif;
+  /*Home page specific*/
+  
+}
