finished adding less files, fixed nav up a bit, imported less files, and fixed home page

--- a/less/index.less
+++ b/less/index.less
@@ -1,7 +1,9 @@
 //Imports here
-
+@import 'variables.less';
 @import 'reset.less';
 @import 'nav.less';
+@import 'header.less';
+@import 'home-pg.less';
 
 /* Your Code Goes Here */
 body{
@@ -12,5 +14,5 @@ body{
   flex-direction: column;
     
   
-    }
+  
 }
