--- a/css/index.css
+++ b/css/index.css
@@ -133,6 +133,40 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+.menu-content {
+  background-color: #828282;
+  width: 100%;
+  display: flex;
+  flex-wrap: none;
+}
+.menu-content nav {
+  display: flex;
+  width: 100%;
+  padding: 10px;
+  flex-direction: row;
+}
+.menu-content nav a {
+  width: 100%;
+  justify-content: flex-end;
+  text-decoration: none;
+  padding: 0 10px;
+}
+.home-page-intro {
+  width: 100%;
+  position: relative;
+}
+.home-page-intro .header-pic {
+  width: 100%;
+}
+.home-page-intro h1 {
+  position: absolute;
+  z-index: 5;
+  bottom: 100px;
+}
+.home-page {
+  margin: auto;
+  width: 80%;
+}
 /* Your Code Goes Here */
 body {
   background-color: #FFFFFF;
@@ -140,25 +174,4 @@ body {
   font-family: Roboto, Arial, sans-serif;
   display: flex;
   flex-direction: column;
-}
-body .menu-content {
-  background-color: #828282;
-  width: 100%;
-  flex-direction: row;
-  flex-wrap: none;
-}
-body .menu-content h1 {
-  width: 50%;
-  border: 2px solid black;
-}
-body .menu-content nav {
-  display: flex;
-  width: 50%;
-  flex-direction: row;
-  border: 2px solid black;
-}
-body .menu-content nav a {
-  flex-direction: column;
-  text-decoration: none;
-  padding: 0 10px;
 }
