--- a/less/nav.less
+++ b/less/nav.less
@@ -1,21 +1,26 @@
 .menu-content{
-    background-color: #828282;
+    background-color: @foot-bg;
     width: 100%;
-    flex-direction: row;
+    display: flex;
+    //flex-direction: row;
     flex-wrap: none;
-    h1{
-      width: 50%;
-      border: 2px solid black;
-    }
+  
     nav{
       display: flex;
-      width: 50%;
-      // padding: 10px 90px;
+      width: 100%;
+      padding: 10px;
       flex-direction: row;
-      border: 2px solid black;
+      // border: 2px solid black;
+      h1{
+        //width: %;
+        // border: 2px solid black;
+      }
       a{
-        flex-direction: column;
+        width: 100%;
+        justify-content: flex-end;
+        // flex-direction: column;
         text-decoration: none;
         padding: 0 10px;
       }
-    } 
+    }
+} 
