Finished defining the variables

--- a/less/variables.less
+++ b/less/variables.less
@@ -9,7 +9,6 @@
 
 //Services Page
 @tab-selected-bg: #5E9FB9;
-
 @tab-hover-color: #FFF;
 
 //Footer
@@ -29,21 +28,20 @@
 @sub-head-font-size: 28px;
 
 //Footer Headings
-// @: 20px;
-// Line Height: 24px;
-// Color: #FFFFFF;
+@foot-head-txt-size: 20px;
+@foot-head-line-height: 24px;
 
-// // Footer Text
-// Font Size: 14px;
-// Line Height: 26px;
-// Color: #FFFFFF;
-// // Navigation Logo
-// Font Weight: Bold;
-// Font Size: 24px;
-// Color: #FFFFFF;
-// // Navigation Text (Expanded)
-// Font Weight: Bold;
-// Font Size: 48px;
-// Line Height: 85px;
-// Color: #FFFFFF;
-// Hover Color: #222222;
+
+// Footer Text
+@foot-txt-size: 14px;
+@foot-line-height: 26px;
+
+// Navigation Logo
+@logo-font-weight: Bold;
+@logo-txt-size: 24px;
+
+// Navigation Text (Expanded)
+@nav-exp-txt-weight: Bold;
+@nav-exp-txt-size: 48px;
+@nav-exp-line-height: 85px;
+@nav-exp-hover-color: #222222;
