--- a/less/header.less
+++ b/less/header.less
@@ -1,7 +1,7 @@
 .home-page-intro{
     width: 100%;
     position: relative;
-    .header-pic{
+    .intro-pic{
         width: 100%;
     }
     h1 {
