--- a/less/nav.less
+++ b/less/nav.less
@@ -1,24 +1,23 @@
 .menu-content{
     background-color: @foot-bg;
     width: 100%;
-    display: flex;
-    //flex-direction: row;
-    flex-wrap: none;
-  
+
     nav{
       display: flex;
       width: 100%;
       padding: 10px;
       flex-direction: row;
-      // border: 2px solid black;
+
       h1{
-        //width: %;
-        // border: 2px solid black;
+        font-weight: @logo-font-weight;
+        font-size: @logo-txt-size;
+        padding-right: 30px;
+        color: @bg-color;
       }
+
       a{
         width: 100%;
         justify-content: flex-end;
-        // flex-direction: column;
         text-decoration: none;
         padding: 0 10px;
       }
