--- a/less/header.less
+++ b/less/header.less
@@ -8,5 +8,10 @@
         position: absolute;
         z-index: 5;
         bottom: 100px;
+        font-weight: @header-font-weight;
+        font-size: @header-font-size;
+        line-height: @header-line-height;
+        color: @tab-hover-color;
+        padding-left: 80px;
     }
 }
