--- a/less/footer.less
+++ b/less/footer.less
@@ -20,11 +20,14 @@ footer{
                 margin: 10px 0;
             }
         }
-
-        .copyright{
-           width: 100%;
-            display: flex;
+    }
+    .copyright{
+        width: 100%;
+        display: flex;
+        p{
+            padding-top: 30px;
             justify-content: center;
+            margin: 0 auto;
         }
     }
 }
