--- a/less/footer.less
+++ b/less/footer.less
@@ -24,10 +24,18 @@ footer{
     .copyright{
         width: 100%;
         display: flex;
+
+        h5{
+           font-size: @foot-head-txt-size;
+           line-height: @foot-head-line-height;  
+        }
         p{
             padding-top: 30px;
             justify-content: center;
             margin: 0 auto;
+            color: @tab-hover-color;
+            font-size: @foot-txt-size;
+            line-height: @foot-line-height;
         }
     }
 }
