--- a/less/index.less
+++ b/less/index.less
@@ -1,19 +1,10 @@
 //Imports here
 @import 'variables.less';
 @import 'reset.less';
+@import 'global.less';
 @import 'nav.less';
 @import 'header.less';
 @import 'home-pg.less';
 @import 'footer.less';
 
 /* Your Code Goes Here */
-body{
-  background-color: #FFFFFF;
-  color: #222222;
-  font-family: Roboto, Arial, sans-serif;
-  display: flex;
-  flex-direction: column;
-    
-  
-  
-}
