--- a/less/header.less
+++ b/less/header.less
@@ -15,3 +15,22 @@
         padding-left: 80px;
     }
 }
+.services-intro{
+    width: 100%;
+    position: relative;
+    .intro-pic{
+        width: 100%;
+        height: auto;
+    }
+    h1 {
+        position: absolute;
+        z-index: 5;
+        bottom: 35px;
+        left: 15px;
+        font-weight: @header-font-weight;
+        font-size: @header-font-size;
+        line-height: @header-line-height;
+        color: @tab-hover-color;
+        
+    } 
+}
