--- a/less/variables.less
+++ b/less/variables.less
@@ -1,7 +1,7 @@
 //GENERAL STYLES
 @bg-color: #FFFFFF;
 @color: #222222;
-@font-fam: Roboto, Arial, sans-serif;
+@font-fam: Roboto Arial sans-serif;
 
 //Page Specific
 //Home Page
@@ -16,7 +16,7 @@
 
 //General Text
 @font-weight: Regular;
-@txt-size: 16px;
+@txt-size: 1.2rem;
 @foot-line-height: 24px;
 
 //Jumbotron Headers
@@ -25,7 +25,7 @@
 @header-line-height: 75px;
 
 // Sub Headers
-@sub-head-font-size: 28px;
+@sub-head-font-size: 1.4rem;
 
 //Footer Headings
 @foot-head-txt-size: 20px;
