--- a/less/footer.less
+++ b/less/footer.less
@@ -18,6 +18,7 @@ footer{
                 padding: 5px;
                 width: 70%;
                 margin: 10px 0;
+                color: grey;
             }
         }
     }
