--- a/less/home-pg.less
+++ b/less/home-pg.less
@@ -1,37 +1,38 @@
-.home-page{
-    margin: 0 auto;
-    width: 80%;
 
     .preview{
         display: flex;
-        flex-wrap: wrap;
+        //flex-wrap: wrap;
         
         .about{
             display: flex;
-            width: 45%;
-            flex-wrap: wrap;
+            width: 100%;
             margin-top: 10px;
             margin-bottom: 10px;
             h3{
                 font-weight: @header-font-weight;
                 font-size: @sub-head-font-size;
             }
-            a{
-                text-decoration: none;
+            .home-text-container{
+                width: 30%;
+                flex-wrap: wrap;
             }
             .btn{
                 border: 1px solid @color;
                 padding: 10px;
+                color: @color;
+                cursor: pointer;
             }
-        }
-        .about-pic{
-            width: 55%;
+            .about-pic{
+            width: 30%;
             margin-top: 30px;
             margin-bottom: 30px;
+            }
         }
+        
         .design-pic{
             width: 55%;
             margin-bottom: 30px;
+            height: auto;
         }
         .designs{
             display: flex;
@@ -49,8 +50,10 @@
             .btn{
                 border: 1px solid @color;
                 padding: 10px;
+                color: @color;
             }
         }
+        
     }
 
     .recent-projects{
@@ -62,6 +65,7 @@
         }
         .villa{
             width: 100%;
+            position: relative;
             h2{
                 display: flex;
                 font-weight: @header-font-weight;
@@ -72,8 +76,9 @@
                 padding: 20px;
                 justify-content: center;
                 position: absolute;
-                top: 138%;
-                left: 66.6%;
+                top: 40%;
+                left: 79%;
+                
             }
             p{
                 margin: 30px 0;
@@ -82,6 +87,7 @@
 
         .outskirts{
             width: 100%;
+            position: relative;
             h2{
                 display: flex;
                 font-weight: @header-font-weight;
@@ -92,7 +98,7 @@
                 padding: 20px;
                 justify-content: center;
                 position: absolute;
-                top: 184%;
+                top: 40%;
             }
             p{
                 margin: 30px 0;
@@ -101,6 +107,7 @@
 
         .blocks{
             width: 100%;
+            position: relative;
             h2{
                 display: flex;
                 font-weight: @header-font-weight;
@@ -111,12 +118,11 @@
                 padding: 20px;
                 justify-content: center;
                 position: absolute;
-                top: 230%;
-                left: 66.5%;
+                top: 40%;
+                left: 79%;
             }
             p{
                 margin: 30px 0;
             }
         }
     }
-}
