--- a/less/index.less
+++ b/less/index.less
@@ -1,10 +1,11 @@
 //Imports here
-@import 'variables.less';
 @import 'reset.less';
+@import 'variables.less';
 @import 'global.less';
 @import 'nav.less';
 @import 'header.less';
 @import 'home-pg.less';
+@import 'service-pg.less';
 @import 'footer.less';
 
 /* Your Code Goes Here */
