--- a/less/home-pg.less
+++ b/less/home-pg.less
@@ -1,41 +1,47 @@
+.home-page{
+    margin: 0 auto;
+    width: 80%;
 
     .preview{
         display: flex;
-        //flex-wrap: wrap;
+        flex-wrap: wrap;
         
         .about{
-            display: flex;
-            width: 100%;
-            margin-top: 10px;
-            margin-bottom: 10px;
+            margin-top: 65px;
+            width: 45%;
+            flex-wrap: wrap;
+            
             h3{
                 font-weight: @header-font-weight;
                 font-size: @sub-head-font-size;
+                margin-bottom: 7px;
             }
-            .home-text-container{
-                width: 30%;
-                flex-wrap: wrap;
+            p{
+                margin-bottom: 10px;
+            }
+            a{
+                text-decoration: none;
             }
             .btn{
                 border: 1px solid @color;
-                padding: 10px;
+                padding: 5px;
                 color: @color;
+                width: 100px;
+                text-align: center;
+            }
+            .btn:hover{
                 cursor: pointer;
+                background-color: aqua;
+
             }
-            .about-pic{
-            width: 30%;
-            margin-top: 30px;
-            margin-bottom: 30px;
-            }
+        }
+        .img-wraper{
+            width: 50%;
+            margin: 30px 0 30px 40px;
         }
         
-        .design-pic{
-            width: 55%;
-            margin-bottom: 30px;
-            height: auto;
-        }
         .designs{
-            display: flex;
+            margin-top: 65px;
             width: 40%;
             flex-wrap: wrap; 
             margin-bottom: 30px;
@@ -43,14 +49,25 @@
             h3{
                 font-weight: @header-font-weight;
                 font-size: @sub-head-font-size;
+                margin-bottom: 7px;
+            }
+            p{
+                margin-bottom: 10px;
             }
             a{
                 text-decoration: none;
             }
             .btn{
                 border: 1px solid @color;
-                padding: 10px;
+                padding: 5px;
                 color: @color;
+                width: 100px;
+                text-align: center;
+            }
+            .btn:hover{
+                cursor: pointer;
+                background-color: aqua;
+                
             }
         }
         
@@ -66,6 +83,9 @@
         .villa{
             width: 100%;
             position: relative;
+            img{
+                width: 100%;
+            }
             h2{
                 display: flex;
                 font-weight: @header-font-weight;
@@ -76,8 +96,8 @@
                 padding: 20px;
                 justify-content: center;
                 position: absolute;
-                top: 40%;
-                left: 79%;
+                top: 48%;
+                left: 66%;
                 
             }
             p{
@@ -88,6 +108,9 @@
         .outskirts{
             width: 100%;
             position: relative;
+            img{
+                width: 100%;
+            }
             h2{
                 display: flex;
                 font-weight: @header-font-weight;
@@ -98,7 +121,7 @@
                 padding: 20px;
                 justify-content: center;
                 position: absolute;
-                top: 40%;
+                top: 48%;
             }
             p{
                 margin: 30px 0;
@@ -108,6 +131,9 @@
         .blocks{
             width: 100%;
             position: relative;
+            img{
+                width: 100%;
+            }
             h2{
                 display: flex;
                 font-weight: @header-font-weight;
@@ -118,11 +144,12 @@
                 padding: 20px;
                 justify-content: center;
                 position: absolute;
-                top: 40%;
-                left: 79%;
+                top: 48%;
+                left: 66%;
             }
             p{
                 margin: 30px 0;
             }
         }
     }
+}
